--- a/Babel/package.json
+++ b/Babel/package.json
@@ -2,10 +2,10 @@
     "devDependencies": {
         "@babel/cli": "^7.18.6",
         "@babel/core": "^7.18.6",
-        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
-        "@babel/plugin-proposal-optional-chaining": "^7.18.6",
         "@babel/preset-env": "^7.18.6",
-        "babelify": "^10.0.0"
+        "babelify": "^10.0.0",
+        "browserify": "^17.0.0",
+        "esmify": "^2.1.1"
     },
     "dependencies": {
         "core-js": "^3.23.5"
